tests/functional2/lang/function-args/eval-fail-missing-args.err.exp
error:
       … from call site
         at /pwd/in.nix:1:1:
            1| ({a, b, c, d}: a + b + c + d) { }
             | ^
            2|

       error: function 'anonymous lambda' called without required arguments 'a', 'b', 'c' and 'd'
       at /pwd/in.nix:1:2:
            1| ({a, b, c, d}: a + b + c + d) { }
             |  ^
            2|
